tests/codegen/errors/reader/special-forms/atom.reader.error.reader.cond.else.not.last/reader-cond-else-not-last.mon
;; TEST-ID: tests.codegen.reader-error.reader-cond-else-not-last
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/special-forms
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected ')' after 'else' clause — 'else' must be last
;; TEST-ATOM: atom.reader.error.reader.cond.else.not.last
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.cond.else.not.last
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected ')' after 'else' clause — 'else' must be last
;; TEST-READER-PATH: reader.c:2976 parser.cond
;; TEST-CODEGEN-PATH: diagnostic.parser.cond
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:2976 Expected ')' after 'else' clause — 'else' must be last
;; TEST-USES-ATOM: atom.reader.error.reader.cond.else.not.last
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.cond
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/special-forms/atom.reader.error.reader.cond.else.not.last
;; TEST-MENU-PATH: codegen/errors/reader/special-forms/atom.reader.error.reader.cond.else.not.last
;; TEST-ATOM-LEAF: atom.reader.error.reader.cond.else.not.last
;; TEST-CLI-TARGET: codegen errors reader special-forms

(module Main)
(cond [else 1] [True 2])
